--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="icon" href="/icon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="icon.png" />
+    <link rel="apple-touch-icon" href="icon-192.png" />
 
-    <link rel="manifest" href="site.webmanifest" />
+    <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#fafafa" />
 
     <style>
