Update OpenGraph metadata to include description and author information; and updated description text to include the order

--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <title>BEM Guide</title>
-    <meta
-      name="description"
-      content="Can't remember what combination of dashes and underscores to use? Neither can I, so I made BEM Guide."
-    />
+    <meta name="description" content="It's block__element--modifier, and you've just saved a click." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <meta property="og:title" content="BEM Guide" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://bem.guide/" />
+    <meta property="og:description" content="It's block__element--modifier, and you've just saved a click." />
+    <meta property="article:author" content="https://twitter.com/ForestKatsch" />
 
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="icon" href="/icon.svg" type="image/svg+xml" />
